# local-places-recommender

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: eda.ipynb
places_recommender/: cli.py  config.py  create_datasets.py
places_recommender/data_models/raw_data/: __init__.py  place.py  review.py  user_data.py
