[tool.poetry]
name = "places-recommender"
version = "0.1.0"
description = ""
authors = ["diefergil <diegofg293@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9,<4.0.0"
pandas = "^1.5.1"
rich = "^12.6.0"
pretty-errors = "^1.2.25"
PyYAML = "^6.0"
tqdm = "^4.64.1"
geopandas = "^0.12.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.16.1"
black = "^22.10.0"
mypy = "^0.982"
click = "^8.1.3"
pyarrow = "^10.0.0"
Fiona = "^1.8.22"
matplotlib = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
